# rust-cardano

cardano-c/: cardano.h
cardano-c/examples/: Makefile  main.c  signed_transaction.c  transaction.c
cardano-c/src/: transaction.rs
chain-c/: .gitignore  Cargo.toml  build.rs  cbindgen.toml
chain-c/src/: address.rs  lib.rs  types.rs
