[package]
name = "chain-c"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>", "Nicolas Di Prima <nicolas.diprima@iohk.io>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/input-output-hk/rust-cardano"
homepage = "https://github.com/input-output-hk/rust-cardano/hermes#README.md"
description = """
Exports simple API to use in C library or to write bindings in
other languages.
"""
build = "build.rs"

[lib]
crate-type = ["staticlib" ]

[dependencies]
chain-addr = { path = "../chain-addr" }

[build-dependencies]
cbindgen = "0.8.7"
